--- a/assets/styles.css
+++ b/assets/styles.css
@@ -525,7 +525,7 @@ code {
   font: 14px/24px;
   padding: 24px 15px;
   text-align: center;
-  font-family: monospace; sans-serif;
+  font-family: monospace, sans-serif;
 }
 
 
@@ -533,7 +533,7 @@ code {
 
 
 /*biodata*/
-section,
+section
 {
   margin: 0 1.5% 24px 1.5%;
   border-radius:5px;
@@ -790,7 +790,7 @@ padding-bottom: 10px;
 
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 2000px) {
     aside{
         float:none;
     }
